[package]
name = "fixnum-approx-eq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixnum = "0.9.2"
thiserror = "1.0.56"

[dev-dependencies]
fixnum = {version = "0.9.2", features = ["default", "i128", "i16"]}

[features]
default = ["i128"]
i16 = ["fixnum/i16"]
i32 = ["fixnum/i32"]
i64 = ["fixnum/i64"]
i128 = ["fixnum/i128"]